v2.0.26 (2020-5-28)
-------------------
- Bug fix in poissonHMM saving and loading
- Change convergence test for poissonHMM fitting

v2.0.25 (2020-5-25)
-------------------
- Fix bug in PoissonHMM, will only try to fit for dig_ins with spike_array
- PoissonHMM hdf5 now stores the cost array for all iterations of fitting

v2.0.24 (2020-5-12)
-------------------
- Fix error in create_trial_table: support digital out

v2.0.23 (2020-5-12)
-------------------
- Fix error in create_trial_table

v2.0.22 (2020-5-1)
-------------------
- Updated requirements
- Fix error in create_trial_table

v2.0.21 (2020-4-9)
-------------------
- Minor fix in PoissonHMM

v2.0.20 (2020-4-2)
-------------------
- Re-structure poissonHMM module to streamline HMM fitting and parameter sweeps

v2.0.19 (2020-3-21)
-------------------
- Fix to make_psth_arrays
- Re-factor and optimize HMM fitting and data storage

v2.0.18 (2020-3-11)
-------------------
- Add HMMHandler to plan and distribute fitting of HMMs over multiple parameter sets and tastes
- Convert to using joblib to fit HMMs in parallel

v2.0.17 (2020-3-2)
-------------------
- Store both BIC and Cost on each iteration of fitting HMM in history
- Critical Bug Fix:
    - Remove use of tempfile when waveform plotting
    - Prevents errors while clustering

v2.0.16 (2020-3-2)
-------------------
- Minor debugging
- Fix to blech clustering, data loading
- Adding functions to plot hmm output

v2.0.15 (2020-2-28)
-------------------
- Trying to get BlechClust object to adpat if experiment root dir has changed
- Updated requirements

v2.0.14 (2020-2-03)
-------------------
- Correction to how spike time autocrrelation and xcorr are computed (from counts -> spike/s)
- Add wavelet transform view and split by rec to spike sorting
- Add umap clustering option to dataset object
- Unfinished module for Poisson HMM decoding of spike data
- Expanded functionality of h5io.get_spike_data to provide data for multiple neurons and digital inputs at once