@@ -1,3 +1,4 @@
+- Modified poissonHMM to allow only using a subset of trials in fitting
 v2.0.26 (2020-5-28)
 -------------------
 - Bug fix in poissonHMM saving and loading
